# fury.proto

./: .gitmodules
js/: .gitignore  README.md  package-lock.json  package.json
js/jax/: store.d.ts  store.js
js/scripts/: proto-gen.sh
js/src/alliance/alliance/: query.ts
js/src/jax/: store.ts
python/: README.md  pyproject.toml
python/scripts/: proto-gen.sh
rust/: Makefile  README.md
rust/lib/: Cargo.toml  README.md
rust/lib/models/: alliance.alliance.rs
rust/src/: Cargo.toml  main.rs
