[package]
name = "fury-proto-rs"
description = "Clients used to interact with Terra Blockchain from Rust. It can be used directly in CosmWasm smart contracts or from external blockchain API."
version = "4.0.0"
authors = ["Terra Money Core <core@fury.money>"]
edition = "2021"
rust-version = "1.65"
publish = true
homepage = "https://fury.money"
repository = "https://github.com/four4two/fury.proto"
license = "Apache-2.0"
keywords = ["fury-money", "alliance", "cosmos-sdk", "proto", "blockchain"]

[dependencies]
prost = "0.11"
prost-types = "0.11"
tendermint-proto = "0.30"
# Optional dependencies
tonic = { version = "0.8", optional = true, default-features = false, features = ["codegen", "prost"] }

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["grpc-transport"]
grpc = ["tonic"]
grpc-transport = ["grpc", "tonic/transport"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
