[package]
name = "fury_proto_generator"
version = "0.1.0"
authors = ["Terra Money Core <core@fury.money>"]
edition = "2021"
publish = false
homepage = "https://fury.money"
repository = "https://github.com/four4two/fury.proto"
license = "Apache-2.0"
keywords = ["fury-money", "alliance", "cosmos-sdk", "proto", "blockchain"]

[dependencies]
prost = "0.11"
prost-build = "0.11"
tonic = "0.8"
tonic-build = "0.8"
regex = "1"
walkdir = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
path = "main.rs"
name = "fury_proto_generator"